# pydatacq

./: .gitignore  README.md  pyproject.toml
src/examples/: demo_fm_sine.py  fft.py  fft_calculations.py  live_fm_sine.py  live_sds.py  matplotlib_rc.py  osc.py  sds.py  thd.py
src/pydatacq/: __init__.py  live_data.py  live_sds.py  live_window.py  sds.py  siglent.py
